--- a/.github/workflows/main_ps4gamesrec.yml
+++ b/.github/workflows/main_ps4gamesrec.yml
@@ -16,6 +16,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      
+      - name: Set up Node.js
+        uses: action/setup-node@v2
+        with: 
+          node-version: '16.x' 
 
       - name: Set up Python version
         uses: actions/setup-python@v2
