--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 flask
-pytorch==1.7.1 torchvision==0.8.2 torchaudio==0.7.2 cpuonly -c pytorch
+-f https://download.pytorch.org/whl/torch_stable.html
+torch==1.8.1+cpu 
+torchvision==0.9.1+cpu
 requests
 transformers
